src/test/deca/syntax/valid/class/22_sousClass.deca
/* Description:
     tester class qui herite d'autre class
     (correct syntaxiquement)

    Historique:
      cree le 08/01/2020
*/

   class  B extends A {


   }
