src/test/deca/syntax/invalid/class/extends_plusieurs_class.deca
/*
	Description: extends plusieurs class 

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b,c,d{
	
}
